--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,12 @@
 			<artifactId>java-dotenv</artifactId>
 			<version>5.1.4</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
